# projet-ml-fastapi

./: .coverage  .gitattributes  .gitignore  DiBattista_Barbara_4_notebook_modelisation_122025.ipynb  Dockerfile  README.md  claude.md  deploy_hf.sh  mkdocs.yml  pyproject.toml  requirements.txt  test.db
.github/workflows/: ci.yml
app/: auth.py  database.py  features.py  main.py  predict.py  schemas.py
database/: create_db.py  init_db.sql  seed_db.py  seed_users.py
docs/: api.md  cicd.md  index.md  installation.md  modele.md  tests.md
gradio_demo/: app.py
ml_model/: model_pipeline.pkl
notebooks/: DiBattista_Barbara_4_notebook_modelisation_122025.ipynb  DiBattista_Barbara_4_notebook_nettoyage_122025.ipynb
tests/: conftest.py  test_auth.py  test_features.py  test_functional.py  test_predict.py  test_routes.py
